Fix Viz process startup when Viz display compositor is enabled

When Viz display compositor is enabled, Viz/GPU process should always
start up to run display compositor even if there is no GPU hardware
acceleration or SwiftShader enabled. In case display compositor is too
unstable causing Viz process to crash three times, we crash the browser.

We still need to prevent unnecessary GL initialization in the Viz
process when GPU hardware acceleration and SwiftShader are not enabled.
That would happen in a future CL.

BUG=799478
TEST=manual

Cq-Include-Trybots: luci.chromium.try:linux_optional_gpu_tests_rel;master.tryserver.chromium.android:android_optional_gpu_tests_rel;master.tryserver.chromium.linux:linux_optional_gpu_tests_rel;master.tryserver.chromium.mac:mac_optional_gpu_tests_rel;master.tryserver.chromium.win:win_optional_gpu_tests_rel
Change-Id: Ibf67dc51cbb69f23ec115adb912dfed328ee613f
Reviewed-on: https://chromium-review.googlesource.com/946672
Reviewed-by: Dmitry Gozman <dgozman@chromium.org>
Reviewed-by: Jesse Doherty <jwd@chromium.org>
Reviewed-by: Zhenyao Mo <zmo@chromium.org>
Reviewed-by: kylechar <kylechar@chromium.org>
Commit-Queue: Mohsen Izadi <mohsen@chromium.org>
Cr-Commit-Position: refs/heads/master@{#545263}
Former-commit-id: 35c8fbb8481424290a9a4beb028c993f8f40693e