content/browser/gpu/gpu_data_manager_impl_private.cc
@@ -12,6 +12,7 @@
 #include "base/bind.h"
 #include "base/bind_helpers.h"
 #include "base/command_line.h"
+#include "base/feature_list.h"
 #include "base/memory/ptr_util.h"
 #include "base/metrics/field_trial.h"
 #include "base/metrics/histogram_functions.h"
@@ -21,6 +22,7 @@
 #include "base/version.h"
 #include "build/build_config.h"
 #include "cc/base/switches.h"
+#include "components/viz/common/features.h"
 #include "content/browser/gpu/browser_gpu_memory_buffer_manager.h"
 #include "content/browser/gpu/compositor_util.h"
 #include "content/browser/gpu/gpu_process_host.h"
@@ -315,6 +317,11 @@ bool GpuDataManagerImplPrivate::GpuAccessAllowed(
   return true;
 }
 
+bool GpuDataManagerImplPrivate::GpuProcessStartAllowed() const {
+  return base::FeatureList::IsEnabled(features::kVizDisplayCompositor) ||
+         GpuAccessAllowed(nullptr);
+}
+
 void GpuDataManagerImplPrivate::RequestCompleteGpuInfoIfNeeded() {
   if (complete_gpu_info_already_requested_)
     return;
@@ -440,8 +447,7 @@ void GpuDataManagerImplPrivate::AppendGpuCommandLine(
                                   gpu::GpuPreferencesToSwitchValue(gpu_prefs));
 
   std::string use_gl;
-  if (card_disabled_ && !swiftshader_blocked_ &&
-      !browser_command_line->HasSwitch(switches::kDisableSoftwareRasterizer)) {
+  if (card_disabled_ && SwiftShaderAllowed()) {
     use_gl = gl::kGLImplementationSwiftShaderForWebGLName;
   } else {
     use_gl = browser_command_line->GetSwitchValueASCII(switches::kUseGL);
@@ -492,15 +498,8 @@ void GpuDataManagerImplPrivate::UpdateGpuPreferences(
 
 void GpuDataManagerImplPrivate::DisableHardwareAcceleration() {
   card_disabled_ = true;
-  bool gpu_process_blocked = true;
-#if BUILDFLAG(ENABLE_SWIFTSHADER)
-  if (!swiftshader_blocked_ &&
-      !base::CommandLine::ForCurrentProcess()->HasSwitch(
-          switches::kDisableSoftwareRasterizer))
-    gpu_process_blocked = false;
-#endif
-  if (gpu_process_blocked)
-    OnGpuProcessBlocked();
+  if (!SwiftShaderAllowed())
+    OnGpuBlocked();
 }
 
 bool GpuDataManagerImplPrivate::HardwareAccelerationEnabled() const {
@@ -509,12 +508,21 @@ bool GpuDataManagerImplPrivate::HardwareAccelerationEnabled() const {
 
 void GpuDataManagerImplPrivate::BlockSwiftShader() {
   swiftshader_blocked_ = true;
-  OnGpuProcessBlocked();
+  OnGpuBlocked();
 }
 
-void GpuDataManagerImplPrivate::OnGpuProcessBlocked() {
-  gpu::GpuFeatureInfo gpu_feature_info =
-      gpu::ComputeGpuFeatureInfoWithNoGpuProcess();
+bool GpuDataManagerImplPrivate::SwiftShaderAllowed() const {
+#if !BUILDFLAG(ENABLE_SWIFTSHADER)
+  return false;
+#else
+  return !swiftshader_blocked_ &&
+         !base::CommandLine::ForCurrentProcess()->HasSwitch(
+             switches::kDisableSoftwareRasterizer);
+#endif
+}
+
+void GpuDataManagerImplPrivate::OnGpuBlocked() {
+  gpu::GpuFeatureInfo gpu_feature_info = gpu::ComputeGpuFeatureInfoWithNoGpu();
   UpdateGpuFeatureInfo(gpu_feature_info);
 
   // Some observers might be waiting.
@@ -834,15 +842,16 @@ void GpuDataManagerImplPrivate::OnGpuProcessInitFailure() {
     DisableHardwareAcceleration();
     return;
   }
-  if (!swiftshader_blocked_) {
+  if (SwiftShaderAllowed()) {
     BlockSwiftShader();
     return;
   }
-  // If GPU process fails to launch with hardware GPU, and then fails
-  // to launch with SwiftShader if available, then GPU process should
-  // not launch again.
-  // TODO(zmo): In viz mode, we will have a GPU process no matter what.
-  NOTREACHED();
+  if (!base::FeatureList::IsEnabled(features::kVizDisplayCompositor)) {
+    // When Viz display compositor is not enabled, if GPU process fails to
+    // launch with hardware GPU, and then fails to launch with SwiftShader if
+    // available, then GPU process should not launch again.
+    NOTREACHED();
+  }
 }
 
 }  // namespace content
