content/browser/gpu/gpu_process_host.h
@@ -182,6 +182,10 @@ class GpuProcessHost : public BrowserChildProcessHostDelegate,
 
   static bool ValidateHost(GpuProcessHost* host);
 
+  // Increments the given crash count. Also, for each hour passed since the
+  // previous crash, removes an old crash from the count.
+  static void IncrementCrashCount(int* crash_count);
+
   GpuProcessHost(int host_id, GpuProcessKind kind);
   ~GpuProcessHost() override;
 
@@ -269,7 +273,6 @@ class GpuProcessHost : public BrowserChildProcessHostDelegate,
   // of a separate GPU process.
   bool in_process_;
 
-  bool swiftshader_rendering_;
   GpuProcessKind kind_;
 
   // Whether we actually launched a GPU process.
@@ -280,16 +283,13 @@ class GpuProcessHost : public BrowserChildProcessHostDelegate,
   // Time Init started.  Used to log total GPU process startup time to UMA.
   base::TimeTicks init_start_time_;
 
-  // Master switch for enabling/disabling GPU acceleration for the current
-  // browser session.
-  static bool gpu_enabled_;
-
-  static bool hardware_gpu_enabled_;
-
   static base::subtle::Atomic32 gpu_crash_count_;
   static int gpu_recent_crash_count_;
   static bool crashed_before_;
   static int swiftshader_crash_count_;
+  static int swiftshader_recent_crash_count_;
+  static int display_compositor_crash_count_;
+  static int display_compositor_recent_crash_count_;
 
   // Here the bottom-up destruction order matters:
   // The GPU thread depends on its host so stop the host last.
