gpu/config/gpu_util.h
@@ -21,8 +21,8 @@ struct GPUInfo;
 GPU_EXPORT GpuFeatureInfo
 ComputeGpuFeatureInfoWithHardwareAccelerationDisabled();
 
-// Set GPU feature status if GPU process is blocked.
-GPU_EXPORT GpuFeatureInfo ComputeGpuFeatureInfoWithNoGpuProcess();
+// Set GPU feature status if GPU is blocked.
+GPU_EXPORT GpuFeatureInfo ComputeGpuFeatureInfoWithNoGpu();
 
 // Set GPU feature status for SwiftShader.
 GPU_EXPORT GpuFeatureInfo ComputeGpuFeatureInfoForSwiftShader();
